# unpii

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  demo.py  demo2.py  plan.md  pyproject.toml  test.md  test2.py  test3.py
bench/: benchmark.py  metrics.py
crates/unpii-core/: Cargo.toml
crates/unpii-core/src/: category.rs  engine.rs  keywords.rs  lib.rs  masker.rs  rules.rs  span.rs
crates/unpii-polars/: Cargo.toml
crates/unpii-polars/src/: expressions.rs  lib.rs
crates/unpii-python/: Cargo.toml
lang/fr/: cities.txt  names.txt  regions.txt  rules.yaml  whitelist.txt
python/unpii/: __init__.py  dataframe.py  polars_ns.py
src/: main.rs
tests/python/: test_patterns.py
