[package]
name = "pii-example"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.0.0"
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2-alpha.2", features = ["cuda"] }
hf-hub = "0.4.3"
parquet = "58.0.0"
pii = { version = "0.1.0", features = ["candle-ner"] }
polars = { version = "0.53.0", features = ["parquet", "lazy"] }
rayon = "1.11.0"
serde_json = "1.0.149"
tokenizers = "0.15.2"
