[package]
name = "unpii"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2-alpha.2", features = ["cuda"] }
hf-hub = "0.4.3"
pii = { version = "0.1.0", features = ["candle-ner"] }
serde_json = "1.0.149"
tokenizers = "0.15.2"
