[package]
name = "unpii"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2-alpha.2"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4.3"
pii = { version = "0.1.0", features = ["candle-ner"] }
regex = "1"
serde_json = "1.0.149"
tokenizers = "0.15.2"
