[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unpii"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["polars>=1.0"]

[dependency-groups]
dev = ["pytest>=8.0", "maturin>=1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/unpii-polars/Cargo.toml"
python-source = "python"
