[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unpii"
version = "0.2.0"
description = "High-performance French medical text anonymization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["polars>=1.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Repository = "https://github.com/dridk/unpii"

[dependency-groups]
dev = ["pytest>=8.0", "maturin>=1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/unpii-polars/Cargo.toml"
python-source = "python"
include = [
    "lang/**/*",
    "crates/**/*",
    "Cargo.toml",
    "Cargo.lock",
]
